# Velo

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  entry-point.sh  manage.py  pyproject.toml
cart/: admin.py  models.py  serializers.py  urls.py  views.py
cart/services/: services.py
catalog/: admin.py  models.py  serializers.py  test.py  urls.py  views.py
catalog/services/: product_service.py
orders/: admin.py  models.py  serializers.py  services.py  views.py
orders/services/: services.py
users/: models.py  serializers.py  test.py  urls.py  views.py
users/management/commands/: createsuperuserifmissing.py
utils/: permissions.py
velo/: asgi.py  settings.py  urls.py  wsgi.py
